Updated base and hover tab styles

--- a/src/patternfly/components/Tabs/__tabs-all.hbs
+++ b/src/patternfly/components/Tabs/__tabs-all.hbs
@@ -10,7 +10,7 @@
 
   <br><br>
 
-  {{#> tabs tabs--id=(concat __tabs-all--id "-box-light-300-example") tabs--modifier="pf-m-box pf-m-color-scheme--light-300 pf-m-scrollable"}}
+  {{#> tabs tabs--id=(concat __tabs-all--id "-box-secondary-example") tabs--modifier="pf-m-box pf-m-secondary pf-m-scrollable"}}
     {{> __tabs-list}}
   {{/tabs}}
 
