--- a/src/patternfly/components/Tabs/tabs.hbs
+++ b/src/patternfly/components/Tabs/tabs.hbs
@@ -1,5 +1,5 @@
 <{{#if tabs--type}}{{tabs--type}}{{else}}div{{/if}} class="{{pfv}}tabs 
-  {{~#if tabs--IsSecondary}} pf-m-secondary{{/if}}
+  {{~#if tabs--IsSubtab}} pf-m-subtab{{/if}}
   {{~#if tabs--IsVertical}} pf-m-vertical{{/if}}
   {{~#if tabs--IsExpandable}} pf-m-expandable{{/if}}
   {{~#if tabs--IsNonExpandable}} pf-m-non-expandable{{/if}}
