--- a/src/patternfly/components/Tabs/tabs.scss
+++ b/src/patternfly/components/Tabs/tabs.scss
@@ -27,45 +27,57 @@ $pf-v5-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
   --#{$tabs}--m-vertical__list--before--BorderBottomWidth: 0;
   --#{$tabs}--m-vertical__list--before--BorderLeftWidth: var(--#{$tabs}--before--border-width--base);
 
+
   // Tabs, Box modifier
   --#{$tabs}--m-box__item--m-current--first-child__link--before--BorderLeftWidth: var(--#{$tabs}__link--before--border-width--base);
   --#{$tabs}--m-box__item--m-current--last-child__link--before--BorderRightWidth: var(--#{$tabs}--before--border-width--base);
 
-  // Box light
-  --#{$tabs}--m-box--m-light__link--BackgroundColor: transparent;
-  --#{$tabs}--m-box--m-light__item--m-current__link--BackgroundColor: var(--pf-t--global--background--color--primary--clicked);
-  --#{$tabs}--m-box--m-light__link--disabled--BackgroundColor: var(--pf-t--global--background--color--disabled--default);
-
-  // Tab List
+  // Tabs List
   --#{$tabs}__list--Display: flex;
 
-  // Tab Item
+  // Tabs Item
   --#{$tabs}__item--BackgroundColor: transparent;
+  --#{$tabs}__item--PaddingBlockStart: var(--pf-t--global--spacer--sm);
+  --#{$tabs}__item--PaddingBlockEnd: var(--pf-t--global--spacer--sm);
+  --#{$tabs}__item--PaddingInlineStart: var(--pf-t--global--spacer--sm);
+  --#{$tabs}__item--PaddingInlineEnd: var(--pf-t--global--spacer--sm);
+  --#{$tabs}--m-vertical__item--PaddingInlineStart: var(--pf-t--global--spacer--md);
+  --#{$tabs}--m-vertical__item--PaddingInlineEnd: var(--pf-t--global--spacer--md);
+  --#{$tabs}__item--m-current--BackgroundColor: transparent;
   --#{$tabs}--m-box__item--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
-  --#{$tabs}--m-box--m-secondary__item--BackgroundColor: var(--pf-t--global--background--color--primary--default);
   --#{$tabs}--m-box__item--m-current--BackgroundColor: var(--pf-t--global--background--color--primary--default);
-  --#{$tabs}--m-box--m-secondary__item--m-current--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
+  --#{$tabs}--m-box--m-secondary__item--BackgroundColor: var(--pf-t--global--background--color--primary--default);
+  --#{$tabs}--m-box--m-secondary__item--m-current--BackgroundColor: var(--pf-t--global--background--color--primary--clicked);
   --#{$tabs}__item--m-action--before--ZIndex: var(--pf-t--global--Zindex--sm);
 
-  // Tab link
+  // Tabs link
   --#{$tabs}__link--Color: var(--pf-t--global--text--color--subtle);
   --#{$tabs}__link--FontSize: var(--pf-t--global--font--size--sm);
-  --#{$tabs}__link--BackgroundColor: transparent;
-  --#{$tabs}__link--OutlineOffset: calc(-1 * #{pf-size-prem(6px)});
-  --#{$tabs}__link--PaddingTop: var(--pf-t--global--spacer--sm);
+  --#{$tabs}__link--BackgroundColor: var(--pf-t--global--background--color--action--plain--default);
+  --#{$tabs}__link--BorderRadius: var(--pf-t--global--border--radius--small);
+  --#{$tabs}__link--PaddingTop: var(--pf-t--global--spacer--xs);
   --#{$tabs}__link--PaddingRight: var(--pf-t--global--spacer--sm);
-  --#{$tabs}__link--PaddingBottom: var(--pf-t--global--spacer--sm);
+  --#{$tabs}__link--PaddingBottom: var(--pf-t--global--spacer--xs);
   --#{$tabs}__link--PaddingLeft: var(--pf-t--global--spacer--sm);
   --#{$tabs}__link--disabled--Color: var(--pf-t--global--text--color--on-disabled);
   --#{$tabs}__link--disabled--BackgroundColor: var(--pf-t--global--background--color--disabled--default);
+  --#{$tabs}__link--hover--BackgroundColor: var(--pf-t--global--background--color--action--plain--hover);
   --#{$tabs}__item--m-current__link--Color: var(--pf-t--global--text--color--regular);
   --#{$tabs}__item--m-current__link--BackgroundColor: var(--pf-t--global--background--color--action--plain--default);
   --#{$tabs}--m-vertical__link--PaddingLeft: var(--pf-t--global--spacer--md);
   --#{$tabs}--m-vertical__link--PaddingRight: var(--pf-t--global--spacer--md);
-  --#{$tabs}--m-box__link--BackgroundColor: var(--#{$pf-global}--BackgroundColor--200);
-  --#{$tabs}--m-box__link--disabled--BackgroundColor: var(--#{$pf-global}--disabled-color--200);
+  --#{$tabs}--m-box__link--BackgroundColor: var(--pf-t--global--background--color--action--plain--default);
+  --#{$tabs}--m-box__link--disabled--Color: var(--pf-t--global--text--color--on-disabled);
+  --#{$tabs}--m-box__link--disabled--BackgroundColor: var(--pf-t--global--background--color--disabled--default);
+  --#{$tabs}--m-box__link--hover--BackgroundColor: var(--pf-t--global--background--color--action--plain--alt--hover);
+  --#{$tabs}--m-box__item--m-current__link--BackgroundColor: var(--pf-t--global--background--color--action--plain--default);
+  --#{$tabs}--m-box--m-secondary__link--BackgroundColor: var(--pf-t--global--background--color--action--plain--default);
+  --#{$tabs}--m-box--m-secondary__link--disabled--Color: var(--pf-t--global--text--color--on-disabled);
+  --#{$tabs}--m-box--m-secondary__link--disabled--BackgroundColor: var(--pf-t--global--background--color--disabled--default);
+  --#{$tabs}--m-box--m-secondary__link--hover--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
+  --#{$tabs}--m-box--m-secondary__item--m-current__link--BackgroundColor: var(--pf-t--global--background--color--action--plain--default);
   --#{$tabs}--m-box__item-action--c-button--disabled--BackgroundColor: var(--#{$pf-global}--palette--black-400);
-  --#{$tabs}--m-secondary__link--FontSize: var(--pf-t--global--font--size--xs);
+  --#{$tabs}--m-subtab__link--FontSize: var(--pf-t--global--font--size--xs);
   --#{$tabs}__item--m-action__link--PaddingRight: var(--pf-t--global--spacer--xs);
 
   // Link before
@@ -95,7 +107,7 @@ $pf-v5-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
   --#{$tabs}__link--after--BorderLeftWidth: 0;
   --#{$tabs}__item--m-current__link--after--BorderColor: var(--pf-t--global--border--color--clicked);
   --#{$tabs}__item--m-current__link--after--BorderWidth: var(--pf-t--global--border--width--extra-strong);
-  --#{$tabs}__link--ColumnGap: var(--pf-t--global--spacer--md);
+  --#{$tabs}__link--ColumnGap: var(--pf-t--global--spacer--sm);
 
   // Scroll buttons
   --#{$tabs}__scroll-button--Color: var(--pf-t--global--icon--color--regular);
@@ -140,7 +152,7 @@ $pf-v5-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
 
   // Item action
   --#{$tabs}__item-action--c-button--FontSize: var(--pf-t--global--font--size--xs);
-  --#{$tabs}--m-secondary__item-action--c-button--FontSize: var(--pf-t--global--font--size--sm);
+  --#{$tabs}--m-subtab__item-action--c-button--FontSize: var(--pf-t--global--font--size--sm);
   --#{$tabs}__item-action--c-button--PaddingTop: var(--pf-t--global--spacer--sm);
   --#{$tabs}__item-action--c-button--PaddingRight: var(--pf-t--global--spacer--sm);
   --#{$tabs}__item-action--c-button--PaddingBottom: var(--pf-t--global--spacer--sm);
@@ -153,7 +165,7 @@ $pf-v5-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
   --#{$tabs}__add--before--BorderColor: var(--#{$tabs}__link--before--border-color--base);
   --#{$tabs}__add--before--BorderLeftWidth: var(--#{$tabs}__link--before--border-width--base);
   --#{$tabs}__add--c-button--FontSize: var(--pf-t--global--font--size--sm);
-  --#{$tabs}--m-secondary__add--c-button--FontSize: var(--pf-t--global--font--size--xs);
+  --#{$tabs}--m-subtab__add--c-button--FontSize: var(--pf-t--global--font--size--xs);
   --#{$tabs}__add--c-button--PaddingTop: var(--#{$tabs}__link--PaddingTop);
   --#{$tabs}__add--c-button--PaddingBottom: var(--#{$tabs}__link--PaddingBottom);
   --#{$tabs}__add--c-button--OutlineOffset: calc(-1 * var(--pf-t--global--spacer--xs));
@@ -243,8 +255,13 @@ $pf-v5-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
 
   // Box
   &.pf-m-box {
+    --#{$tabs}__item--BackgroundColor: var(--#{$tabs}--m-box__item--BackgroundColor);
+    --#{$tabs}__item--m-current--BackgroundColor: var(--#{$tabs}--m-box__item--m-current--BackgroundColor);
     --#{$tabs}__link--BackgroundColor: var(--#{$tabs}--m-box__link--BackgroundColor);
+    --#{$tabs}__link--disabled--Color: var(--#{$tabs}--m-box__link--disabled--Color);
     --#{$tabs}__link--disabled--BackgroundColor: var(--#{$tabs}--m-box__link--disabled--BackgroundColor);
+    --#{$tabs}__link--hover--BackgroundColor: var(--#{$tabs}--m-box__link--hover--BackgroundColor);
+    --#{$tabs}__item--m-current__link--BackgroundColor: var(--#{$tabs}--m-box__item--m-current__link--BackgroundColor);
     --#{$tabs}__link--before--BorderBottomWidth: var(--#{$tabs}__link--before--border-width--base);
     --#{$tabs}__link--before--BorderRightWidth: var(--#{$tabs}__link--before--border-width--base);
     --#{$tabs}__link--disabled--before--BorderRightWidth: var(--#{$tabs}__link--before--border-width--base);
@@ -295,10 +312,14 @@ $pf-v5-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
     }
     // stylelint-enable
 
-    &.pf-m-light {
-      --#{$tabs}__link--BackgroundColor: var(--#{$tabs}--m-box--m-light__link--BackgroundColor);
-      --#{$tabs}__item--m-current__link--BackgroundColor: var(--#{$tabs}--m-box--m-light__item--m-current__link--BackgroundColor);
-      --#{$tabs}__link--disabled--BackgroundColor: var(--#{$tabs}--m-box--m-light__link--disabled--BackgroundColor);
+    &.pf-m-secondary {
+      --#{$tabs}__item--BackgroundColor: var(--#{$tabs}--m-box--m-secondary__item--BackgroundColor);
+      --#{$tabs}__item--m-current--BackgroundColor: var(--#{$tabs}--m-box--m-secondary__item--m-current--BackgroundColor);
+      --#{$tabs}__link--BackgroundColor: var(--#{$tabs}--m-box--m-secondary__link--BackgroundColor);
+      --#{$tabs}__link--disabled--Color: var(--#{$tabs}--m-box--m-secondary__link--disabled--Color);
+      --#{$tabs}__link--disabled--BackgroundColor: var(--#{$tabs}--m-box--m-secondary__link--disabled--BackgroundColor);
+      --#{$tabs}__link--hover--BackgroundColor: var(--#{$tabs}--m-box--m-secondary__link--hover--BackgroundColor);
+      --#{$tabs}__item--m-current__link--BackgroundColor: var(--#{$tabs}--m-box--m-secondary__item--m-current__link--BackgroundColor);
     }
 
     .#{$tabs}__item-action .#{$button} {
@@ -311,6 +332,8 @@ $pf-v5-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
     --#{$tabs}--Width: var(--#{$tabs}--m-vertical--Width);
     --#{$tabs}--inset: var(--#{$tabs}--m-vertical--inset);
     --#{$tabs}--before--BorderBottomWidth: 0;
+    --#{$tabs}__item--PaddingInlineStart: var(--#{$tabs}--m-vertical__item--PaddingInlineStart);
+    --#{$tabs}__item--PaddingInlineEnd: var(--#{$tabs}--m-vertical__item--PaddingInlineEnd);
     --#{$tabs}__link--PaddingLeft: var(--#{$tabs}--m-vertical__link--PaddingLeft);
     --#{$tabs}__link--PaddingRight: var(--#{$tabs}--m-vertical__link--PaddingRight);
     --#{$tabs}__link--before--Left: 0;
@@ -450,10 +473,10 @@ $pf-v5-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
     // stylelint-enable
   }
 
-  &.pf-m-secondary {
-    --#{$tabs}__link--FontSize: var(--#{$tabs}--m-secondary__link--FontSize);
-    --#{$tabs}__item-action--c-button--FontSize: var(--#{$tabs}--m-secondary__item-action--c-button--FontSize);
-    --#{$tabs}__add--c-button--FontSize: var(--#{$tabs}--m-secondary__add--c-button--FontSize);
+  &.pf-m-subtab {
+    --#{$tabs}__link--FontSize: var(--#{$tabs}--m-subtab__link--FontSize);
+    --#{$tabs}__item-action--c-button--FontSize: var(--#{$tabs}--m-subtab__item-action--c-button--FontSize);
+    --#{$tabs}__add--c-button--FontSize: var(--#{$tabs}--m-subtab__add--c-button--FontSize);
   }
 
   &.pf-m-page-insets {
@@ -518,12 +541,18 @@ $pf-v5-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
   display: flex;
   flex: none;
   scroll-snap-align: var(--#{$tabs}__item--ScrollSnapAlign);
+  padding-block-start: var(--#{$tabs}__item--PaddingBlockStart);
+  padding-block-end: var(--#{$tabs}__item--PaddingBlockEnd);
+  padding-inline-start: var(--#{$tabs}__item--PaddingInlineStart);
+  padding-inline-end: var(--#{$tabs}__item--PaddingInlineEnd);
+  background-color: var(--#{$tabs}__item--BackgroundColor);
 
   // Current
   &.pf-m-current {
     --#{$tabs}__link--Color: var(--#{$tabs}__item--m-current__link--Color);
     --#{$tabs}__link--after--BorderColor: var(--#{$tabs}__item--m-current__link--after--BorderColor);
     --#{$tabs}__link--after--BorderWidth: var(--#{$tabs}__item--m-current__link--after--BorderWidth);
+    --#{$tabs}__item--BackgroundColor: var(--#{$tabs}__item--m-current--BackgroundColor);
   }
 
   // Action
@@ -583,6 +612,7 @@ $pf-v5-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
     --#{$tabs}__link--after--BorderBottomWidth: var(--#{$tabs}__link--after--BorderWidth); // Set default border target
 
     background-color: var(--#{$tabs}__link--BackgroundColor);
+    border-radius: var(--#{$tabs}__link--BorderRadius);
   }
 
   position: relative;
@@ -596,7 +626,6 @@ $pf-v5-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
   font-size: var(--#{$tabs}__link--FontSize);
   color: var(--#{$tabs}__link--Color);
   text-decoration: none;
-  outline-offset: var(--#{$tabs}__link--OutlineOffset);
 
   @at-root .#{$tabs}__item.pf-m-action,
   & {
@@ -629,7 +658,7 @@ $pf-v5-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
   }
 
   // Tab item hover state
-  @at-root .#{$tabs}__item.pf-m-action,
+  // @at-root .#{$tabs}__item.pf-m-action,
   // & {
   //   &:hover {
   //   }
@@ -645,8 +674,9 @@ $pf-v5-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
   //   }
   // }
 
-  // &:where(:hover, :focus) {
-  // }
+  &:where(:hover, :focus) {
+    --#{$tabs}__link--BackgroundColor: var(--#{$tabs}__link--hover--BackgroundColor);
+  }
 
   &:disabled,
   &.pf-m-disabled {
